include/Iedk.h

    
    typedef enum IEE_FacialExpressionThreshold_enum {
        FE_SENSITIVITY  
    } IEE_FacialExpressionThreshold_t;
    typedef enum IEE_FacialExpressionTrainingControl_enum {
        FE_NONE = 0,    
        FE_START,       
        FE_ACCEPT,      
        FE_REJECT,      
        FE_ERASE,       
        FE_RESET        
    } IEE_FacialExpressionTrainingControl_t;
    typedef enum IEE_FacialExpressionSignature_enum {
        FE_SIG_UNIVERSAL = 0,   
        FE_SIG_TRAINED          
    } IEE_FacialExpressionSignature_t;
    typedef enum IEE_MentalCommandTrainingControl_enum {
        MC_NONE = 0,    
        MC_START,       
        MC_ACCEPT,      
        MC_REJECT,      
        MC_ERASE,       
        MC_RESET        
    } IEE_MentalCommandTrainingControl_t;
    typedef void* EmoStateHandle;
    typedef void* EmoEngineEventHandle;
    typedef enum IEE_Event_enum {
        IEE_UnknownEvent          = 0x0000,     
        IEE_EmulatorError         = 0x0001,     
        IEE_ReservedEvent         = 0x0002,     
        IEE_UserAdded             = 0x0010,     
        IEE_UserRemoved           = 0x0020,     
        IEE_EmoStateUpdated       = 0x0040,     
        IEE_ProfileEvent          = 0x0080,     
        IEE_MentalCommandEvent    = 0x0100,     
        IEE_FacialExpressionEvent = 0x0200,     
        IEE_InternalStateChanged  = 0x0400,     
        IEE_AllEvent              = IEE_UserAdded | IEE_UserRemoved | IEE_EmoStateUpdated |
                                    IEE_ProfileEvent | IEE_MentalCommandEvent |
                                    IEE_FacialExpressionEvent | IEE_InternalStateChanged
    } IEE_Event_t;
    typedef enum IEE_FacialExpressionEvent_enum {
        IEE_FacialExpressionNoEvent = 0,        
        IEE_FacialExpressionTrainingStarted,    
        IEE_FacialExpressionTrainingSucceeded,  
        IEE_FacialExpressionTrainingFailed,     
        IEE_FacialExpressionTrainingCompleted,  
        IEE_FacialExpressionTrainingDataErased, 
        IEE_FacialExpressionTrainingRejected,   
        IEE_FacialExpressionTrainingReset       
    } IEE_FacialExpressionEvent_t;
    typedef enum IEE_MentalCommandEvent_enum {
        IEE_MentalCommandNoEvent = 0,                   
        IEE_MentalCommandTrainingStarted,               
        IEE_MentalCommandTrainingSucceeded,             
        IEE_MentalCommandTrainingFailed,                
        IEE_MentalCommandTrainingCompleted,             
        IEE_MentalCommandTrainingDataErased,            
        IEE_MentalCommandTrainingRejected,              
        IEE_MentalCommandTrainingReset,                 
        IEE_MentalCommandAutoSamplingNeutralCompleted,  
        IEE_MentalCommandSignatureUpdated               
    } IEE_MentalCommandEvent_t;
    typedef struct IInputSensorDescriptor_struct {
        IEE_InputChannels_t channelId;  
        int                 fExists;    
        const char*         pszLabel;   
        double              xLoc;       
        double              yLoc;       
        double              zLoc;       
    } IInputSensorDescriptor_t;
    typedef enum IEE_MotionDataChannel_enum {
        IMD_COUNTER = 0,        
        IMD_GYROX,              
        IMD_GYROY,              
        IMD_GYROZ,              
        IMD_ACCX,               
        IMD_ACCY,               
        IMD_ACCZ,               
        IMD_MAGX,               
        IMD_MAGY,               
        IMD_MAGZ,               
        IMD_TIMESTAMP           
    } IEE_MotionDataChannel_t;
    EDK_API int
        IEE_EngineConnect(const char* strDevID = "Emotiv Systems-5");
    EDK_API int
        IEE_EngineRemoteConnect(const char* szHost,
                                unsigned short port);
    EDK_API int
        IEE_EngineDisconnect();
    EDK_API int
        IEE_EnableDiagnostics(const char* szFilename,
                              int fEnable,
                              int nReserved);
    EDK_API EmoEngineEventHandle
        IEE_EmoEngineEventCreate();
    EDK_API EmoEngineEventHandle
        IEE_ProfileEventCreate();
    EDK_API void
        IEE_EmoEngineEventFree(EmoEngineEventHandle hEvent);
    EDK_API EmoStateHandle
        IEE_EmoStateCreate();
    EDK_API void
        IEE_EmoStateFree(EmoStateHandle hState);
    EDK_API IEE_Event_t
        IEE_EmoEngineEventGetType(EmoEngineEventHandle hEvent);
    EDK_API IEE_MentalCommandEvent_t
        IEE_MentalCommandEventGetType(EmoEngineEventHandle hEvent);
    EDK_API IEE_FacialExpressionEvent_t
        IEE_FacialExpressionEventGetType(EmoEngineEventHandle hEvent);
    EDK_API int
        IEE_EmoEngineEventGetUserId(EmoEngineEventHandle hEvent,
                                    unsigned int *pUserIdOut);
    EDK_API int
        IEE_EmoEngineEventGetEmoState(EmoEngineEventHandle hEvent,
                                      EmoStateHandle hEmoState);
    EDK_API int
        IEE_EngineGetNextEvent(EmoEngineEventHandle hEvent);