examples/C#/DotNetEmotivSDK/EdkDll.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Runtime.InteropServices;

namespace Emotiv
{
    public class EdkDll
    {
        public const Int32 EDK_OK                           = 0x0000;
        public const Int32 EDK_UNKNOWN_ERROR                = 0x0001;

        public const Int32 EDK_INVALID_PROFILE_ARCHIVE      = 0x0101;
        public const Int32 EDK_NO_USER_FOR_BASEPROFILE      = 0x0102;

        public const Int32 EDK_CANNOT_ACQUIRE_DATA          = 0x0200;

        public const Int32 EDK_BUFFER_TOO_SMALL             = 0x0300;
        public const Int32 EDK_OUT_OF_RANGE                 = 0x0301;
        public const Int32 EDK_INVALID_PARAMETER            = 0x0302;
        public const Int32 EDK_PARAMETER_LOCKED             = 0x0303;
        public const Int32 EDK_MC_INVALID_TRAINING_ACTION   = 0x0304;
        public const Int32 EDK_MC_INVALID_TRAINING_CONTROL  = 0x0305;
        public const Int32 EDK_MC_INVALID_ACTIVE_ACTION     = 0x0306;
        public const Int32 EDK_MC_EXCESS_MAX_ACTIONS        = 0x0307;
        public const Int32 EDK_FE_NO_SIG_AVAILABLE          = 0x0308;
        public const Int32 EDK_FILESYSTEM_ERROR             = 0x0309;

        public const Int32 EDK_INVALID_USER_ID              = 0x0400;

        public const Int32 EDK_EMOENGINE_UNINITIALIZED      = 0x0500;
        public const Int32 EDK_EMOENGINE_DISCONNECTED       = 0x0501;
        public const Int32 EDK_EMOENGINE_PROXY_ERROR        = 0x0502;

        public const Int32 EDK_NO_EVENT                     = 0x0600;

        public const Int32 EDK_GYRO_NOT_CALIBRATED          = 0x0700;

        public const Int32 EDK_OPTIMIZATION_IS_ON           = 0x0800;

        public const Int32 EDK_RESERVED1                    = 0x0900;

        public enum IEE_FacialExpressionThreshold_t
        {
            FE_SENSITIVITY
        } ;

        public enum IEE_FacialExpressionTrainingControl_t
        {
            FE_NONE = 0, FE_START, FE_ACCEPT, FE_REJECT, FE_ERASE, FE_RESET
        } ;

        public enum IEE_FacialExpressionSignature_t
        {
            FE_SIG_UNIVERSAL = 0, FE_SIG_TRAINED
        } ;

        public enum IEE_MentalCommandTrainingControl_t 
        {
            MC_NONE = 0, MC_START, MC_ACCEPT, MC_REJECT, MC_ERASE, MC_RESET
        } ;

        public enum IEE_Event_t
        {
            IEE_UnknownEvent          = 0x0000,
            IEE_EmulatorError         = 0x0001,
            IEE_ReservedEvent         = 0x0002,
            IEE_UserAdded             = 0x0010,
            IEE_UserRemoved           = 0x0020,
            IEE_EmoStateUpdated       = 0x0040,
            IEE_ProfileEvent          = 0x0080,
            IEE_MentalCommandEvent    = 0x0100,
            IEE_FacialExpressionEvent = 0x0200,
            IEE_InternalStateChanged  = 0x0400,
            IEE_AllEvent              = IEE_UserAdded | IEE_UserRemoved | IEE_EmoStateUpdated | IEE_ProfileEvent |
                                       IEE_MentalCommandEvent | IEE_FacialExpressionEvent | IEE_InternalStateChanged
        } ;

        public enum IEE_FacialExpressionEvent_t 
        {
            IEE_FacialExpressionNoEvent = 0,
            IEE_FacialExpressionTrainingStarted,
            IEE_FacialExpressionTrainingSucceeded,
            IEE_FacialExpressionTrainingFailed,
            IEE_FacialExpressionTrainingCompleted,
            IEE_FacialExpressionTrainingDataErased,
            IEE_FacialExpressionTrainingRejected,
            IEE_FacialExpressionTrainingReset
        } ;

        public enum IEE_MentalCommandEvent_t 
        {
            IEE_MentalCommandNoEvent = 0,
            IEE_MentalCommandTrainingStarted,
            IEE_MentalCommandTrainingSucceeded,
            IEE_MentalCommandTrainingFailed,
            IEE_MentalCommandTrainingCompleted,
            IEE_MentalCommandTrainingDataErased,
            IEE_MentalCommandTrainingRejected,
            IEE_MentalCommandTrainingReset,
            IEE_MentalCommandAutoSamplingNeutralCompleted,
            IEE_MentalCommandSignatureUpdated
        } ;

        public enum IEE_DataChannel_t   
        {
            IED_COUNTER = 0,        //!< Sample counter
            IED_INTERPOLATED = 1,   //!< Indicate if data is interpolated
            IED_RAW_CQ = 2,         //!< Raw contact quality value
            IED_AF3 = 3,            //!< Channel AF3
            IED_T7 = 7,             //!< Channel T7
            IED_Pz = 9,             //!< Channel Pz
            IED_T8 = 12,            //!< Channel T8
            IED_AF4 = 16,           //!< Channel AF4
            IED_TIMESTAMP = 19,     //!< System timestamp
            IED_ES_TIMESTAMP = 20,  //!< EmoState timestamp
            IED_FUNC_ID = 21,       //!< Reserved function id
            IED_FUNC_VALUE = 22,    //!< Reserved function value
            IED_MARKER = 23,        //!< Marker value from hardware
            IED_SYNC_SIGNAL = 24    //!< Synchronisation signal
	    } ;

        public enum IEE_MotionDataChannel_t 
        {
            IMD_COUNTER = 0,        //!< Sample counter
            IMD_GYROX,              //!< Gyroscope X-axis
            IMD_GYROY,              //!< Gyroscope Y-axis
            IMD_GYROZ,              //!< Gyroscope Z-axis
            IMD_ACCX,               //!< Accelerometer X-axis
            IMD_ACCY,               //!< Accelerometer Y-axis
            IMD_ACCZ,               //!< Accelerometer Z-axis
            IMD_MAGX,               //!< Magnetometer X-axis
            IMD_MAGY,               //!< Magnetometer Y-axis
            IMD_MAGZ,               //!< Magnetometer Z-axis
            IMD_TIMESTAMP           //!< Timestamp of the motion data stream
        } ;

        [StructLayout(LayoutKind.Sequential)]
        public class IInputSensorDescriptor_t
        {
            public IEE_InputChannels_t channelId; // logical channel id
            public Int32 fExists;                 // does this sensor exist on this headset model
            public String pszLabel;               // text label identifying this sensor
            public Double xLoc;                   // x coordinate from center of head towards nose
            public Double yLoc;                   // y coordinate from center of head towards ears
            public Double zLoc;                   // z coordinate from center of head toward top of skull
        }

        public enum IEE_EmotivSuite_t
        {
            IEE_FACIALEXPRESSION = 0, IEE_PERFORMANCEMETRIC, IEE_MENTALCOMMAND
        } ;

        public enum IEE_FacialExpressionAlgo_t
        {
            FE_NEUTRAL     = 0x0001,
            FE_BLINK       = 0x0002,
            FE_WINK_LEFT   = 0x0004,
            FE_WINK_RIGHT  = 0x0008,
            FE_HORIEYE     = 0x0010,
            FE_SUPRISE     = 0x0020,
            FE_FROWN       = 0x0040,
            FE_SMILE       = 0x0080,
            FE_CLENCH      = 0x0100,
        } ;

        public enum IEE_PerformanceMetricAlgo_t
        {
            PM_EXCITEMENT      = 0x0001,
            PM_RELAXATION      = 0x0002,
            PM_STRESS          = 0x0004,
            PM_ENGAGEMENT      = 0x0008,
            PM_INTEREST        = 0x0010
        } ;

        public enum IEE_MentalCommandAction_t
        {
            MC_NEUTRAL                  = 0x0001,
            MC_PUSH                     = 0x0002,
            MC_PULL                     = 0x0004,
            MC_LIFT                     = 0x0008,
            MC_DROP                     = 0x0010,
            MC_LEFT                     = 0x0020,
            MC_RIGHT                    = 0x0040,
            MC_ROTATE_LEFT              = 0x0080,
            MC_ROTATE_RIGHT             = 0x0100,
            MC_ROTATE_CLOCKWISE         = 0x0200,
            MC_ROTATE_COUNTER_CLOCKWISE = 0x0400,
            MC_ROTATE_FORWARDS          = 0x0800,
            MC_ROTATE_REVERSE           = 0x1000,
            MC_DISAPPEAR                = 0x2000

        } ;
        public enum IEE_SignalStrength_t
        {
            NO_SIG = 0, BAD_SIG, GOOD_SIG
        } ;

        public enum IEE_InputChannels_t
        {
            IEE_CHAN_CMS = 0, 
            IEE_CHAN_DRL = 0, 
            IEE_CHAN_AF3 = 3, 
            IEE_CHAN_T7  = 7,
		    IEE_CHAN_Pz  = 9, 
            IEE_CHAN_T8  = 12, 
            IEE_CHAN_AF4 = 16
        } ;

        public enum IEE_EEG_ContactQuality_t
        {
            IEEG_CQ_NO_SIGNAL, 
            IEEG_CQ_VERY_BAD, 
            IEEG_CQ_POOR, 
            IEEG_CQ_FAIR, 
            IEEG_CQ_GOOD 
        } ;

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EngineConnect")]
        static extern Int32 Unmanged_IEE_EngineConnect(String security);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EngineLocalConnect")]
        static extern Int32 Unmanged_IEE_EngineLocalConnect(String pathEEGFile, String pathMotionFile);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EngineRemoteConnect")]
        static extern Int32 Unmanged_IEE_EngineRemoteConnect(String szHost, UInt16 port);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EngineDisconnect")]
        static extern Int32 Unmanged_IEE_EngineDisconnect();
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EnableDiagnostics")]
        static extern Int32 Unmanged_IEE_EnableDiagnostics(String szFilename, Int32 fEnable, Int32 nReserved);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoEngineEventCreate")]
        static extern IntPtr Unmanged_IEE_EmoEngineEventCreate();
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_ProfileEventCreate")]
        static extern IntPtr Unmanged_IEE_ProfileEventCreate();
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoEngineEventFree")]
        static extern void Unmanged_IEE_EmoEngineEventFree(IntPtr hEvent);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoStateCreate")]
        static extern IntPtr Unmanged_IEE_EmoStateCreate();
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoStateFree")]
        static extern void Unmanged_IEE_EmoStateFree(IntPtr hState);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoEngineEventGetType")]
        static extern IEE_Event_t Unmanged_IEE_EmoEngineEventGetType(IntPtr hEvent);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_MentalCommandEventGetType")]
        static extern IEE_MentalCommandEvent_t Unmanged_IEE_MentalCommandEventGetType(IntPtr hEvent);
        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_FacialExpressionEventGetType")]
        static extern IEE_FacialExpressionEvent_t Unmanged_IEE_FacialExpressionEventGetType(IntPtr hEvent);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoEngineEventGetUserId")]
        static extern Int32 Unmanged_IEE_EmoEngineEventGetUserId(IntPtr hEvent, out UInt32 pUserIdOut);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EmoEngineEventGetEmoState")]
        static extern Int32 Unmanged_IEE_EmoEngineEventGetEmoState(IntPtr hEvent, IntPtr hEmoState);

        [DllImport("edk.dll", CallingConvention = CallingConvention.Cdecl, EntryPoint = "IEE_EngineGetNextEvent")]
        static extern Int32 Unmanged_IEE_EngineGetNextEvent(IntPtr hEvent);
